update jpa with specification
