# jpa-with-specification-query/src/main/java/com/springboot/project/model/CustomerFilterResult.java
@@ -1,0 +1,16 @@
+package com.springboot.project.model;
+
+import lombok.Getter;
+import lombok.Setter;
+
+import java.util.List;
+
+@Getter
+@Setter
+public class CustomerFilterResult {
+
+    private List<CustomerFilterDetail> customers;
+    private Long foundNumber;
+    private Long totalNumber;
+
+}
